--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
   <title>JavaScript Udemy</title>
 </head>
 <body>
-  hello world! 
+  <h4>8. DATA TYPES IN JAVASCRIPT</h4>
+
+  <ul>
+    <h3>Primitive Data Types:</h3>
+    <li>Stored directly in the location the variable accesses</li>
+    <li>Stored on the stack. </li>
+    <li>String</li>
+    <li>Number</li>
+    <li>Boolean</li>
+    <!-- Teller is Null because he's chosen not to have a last name -->
+    <li>Null: an intentional empty value.</li> 
+    <!-- Somehow Cher is undefined -->
+    <li>Undefined: declare a variable but don't put an item inside of it, then it is undefined</li>
+    <li>Symbols (ES6)</li>
+  </ul>
+
+  <ul>
+    <h5>Reference Data Types/Objects</h5>
+    <li>Accessed by reference</li>
+    <li>Objects that are stored on the heap</li>
+    <li>A pointer to a location in memory</li>
+    <li>Arrays</li>
+    <li>Object Literals</li>
+    <li>Functions</li>
+    <li>Dates</li>
+    <li>Anything Else...</li>
+  </ul>
+
+  <ul>
+    <h5>Dynamically Typed Language</h5>
+    <li>Types are associated with values not variables</li>
+    <li>The same variable can hold multiple types</li>
+    <li>We do not need to specify types</li>
+    <li>Most other languages are statically typed (Java, C#, C##)</li>
+    <li>There are supersets of JS and addons to allow static typing (TypeScript, Flow)</li>
+  </ul>
+
+  <h4>19. GENERAL LOOPS</h4>
+  
+  <p>using continue; in a for loop lets your code continue iterating without doing whatever is next...</p>
+
+  <h4>22. WHAT IS THE DOM?</h4>
+  <ul>
+    <li>DOCUMENT OBJECT MODEL</li>
+    <li>Tree of nodes/elements created by the browser</li>
+    <li>JavaScript can be used to read/write/manipulate the DOM</li>
+    <li>Object Oriented Representation</li>
+  </ul>
+
+  <h4>ES6 PROMISES</h4>
+  <p>Can use promises instead of callback function.</p>
 </body>
 </html>
