--- a/Section 67 - FETCH/Section 70 - FETCH W/PROMISES/fetchPromise.html
+++ b/Section 67 - FETCH/Section 70 - FETCH W/PROMISES/fetchPromise.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="./callback.js"></script>
-  <title>Callback Function</title>
+  <script defer src="./fetchPromise.js"></script>
+  <script defer src="./app.js"></script>
+  <title>Fetch With Promises</title>
 </head>
 <body>
-  
+  <h1>Fetch With Promises</h1>
 </body>
 </html>
